objects/ASI_CRM_Call_Plan__c.object
<CustomObject>
    <description>ASI CRM - Call Plan. The following countries are using this object:
-PRJ</description>
    <fields>
        <fullName>ASI_CRM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visitation_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Call_Plan_Period__c</fullName>
        <formula>TEXT(ASI_CRM_Period_From__c) &amp; &apos; ~ &apos; &amp;  TEXT(ASI_CRM_Period_To__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Plan Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Achieved__c</fullName>
        <label>No. of Achieved</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Achieved</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Ad_hoc__c</fullName>
        <label>No. of Ad-hoc</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Ad_hoc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Cancelled__c</fullName>
        <label>No. of Cancelled</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Draft__c</fullName>
        <label>No. of Draft</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Planned__c</fullName>
        <label>No. of Planned</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_TnE_Created__c</fullName>
        <label>No. of TnE Created</label>
        <summaryFilterItems>
            <field>ASI_CRM_Call_Detail__c.ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>TnE Created</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Call_Detail__c.ASI_CRM_Call_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_From__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Period_To__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Staff_Code__c</fullName>
        <formula>Owner:User.ASI_TnE_Sub_Ledger__c</formula>
        <label>Staff Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Set_Draft__c</fullName>
        <formula>IF( CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Object_API__c, &apos;ASI_CRM_Call_Plan__c&apos;),  $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Bybass_Validation__c , false)</formula>
        <label>Sys_Allow Set Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Fiscal_Year__c</fullName>
        <formula>IF( MONTH(ASI_CRM_Period_From__c ) &gt;= 7 , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_CRM_Period_From__c )), 2) &amp; RIGHT(TEXT(YEAR(ASI_CRM_Period_From__c ) + 1), 2) , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_CRM_Period_From__c ) - 1), 2) &amp; RIGHT(TEXT(YEAR(ASI_CRM_Period_From__c )), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_In_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_In Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Is_Real_Time_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Is Real Time Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Ref_Period_From__c</fullName>
        <label>Sys_Ref Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Ref_Period_To__c</fullName>
        <label>Sys_Ref Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Trigger_Time__c</fullName>
        <formula>NOW() - 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Trigger Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TnE_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TnE Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_TnE_ClaimHeader__c.ASI_TnE_Status__c</field>
                <operation>equals</operation>
                <value>Draft</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TnE_ClaimHeader__c</referenceTo>
        <relationshipLabel>Call Plans</relationshipLabel>
        <relationshipName>Visitation_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call Plan</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Call_Plans</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Period_From__c</columns>
        <columns>ASI_CRM_Period_To__c</columns>
        <columns>ASI_CRM_Approved__c</columns>
        <columns>ASI_CRM_TnE_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Plan__c.ASI_CRM_JP_Call_Plan,ASI_CRM_Call_Plan__c.ASI_CRM_JP_Call_Plan_Locked</value>
        </filters>
        <label>All JP Call Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_My_Call_Plans</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Period_From__c</columns>
        <columns>ASI_CRM_Period_To__c</columns>
        <columns>ASI_CRM_Approved__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Plan__c.ASI_CRM_JP_Call_Plan,ASI_CRM_Call_Plan__c.ASI_CRM_JP_Call_Plan_Locked</value>
        </filters>
        <label>My JP Call Plans</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Call Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan</fullName>
        <active>true</active>
        <label>JP Call Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan_Locked</fullName>
        <active>true</active>
        <label>JP Call Plan Locked</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Period_Date_Validation</fullName>
        <active>true</active>
        <description>Check if Period To is greater than Period From</description>
        <errorConditionFormula>(ASI_CRM_Period_From__c &gt; ASI_CRM_Period_To__c) &amp;&amp; (CONTAINS( RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Period_From__c</errorDisplayField>
        <errorMessage>&quot;Period From&quot; must not be greater than &quot;Period To&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Period_From_DateTooLarge</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName=&apos;ASI_CRM_JP_Call_Plan&apos; &amp;&amp; ASI_CRM_Sys_Ref_Period_From__c &lt; ASI_CRM_Period_From__c &amp;&amp;  ISCHANGED(ASI_CRM_Period_From__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Period_From__c</errorDisplayField>
        <errorMessage>You cannot change Period From to this date. There is Call(s) in this Plan with date earlier than this date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Period_To_DateTooEarly</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName=&apos;ASI_CRM_JP_Call_Plan&apos; &amp;&amp;  ASI_CRM_Sys_Ref_Period_To__c &gt; ASI_CRM_Period_To__c &amp;&amp; ISCHANGED(ASI_CRM_Period_To__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Period_To__c</errorDisplayField>
        <errorMessage>You cannot change Period To to this date. There is Call(s) in this Plan with date later than this date.</errorMessage>
    </validationRules>
</CustomObject>